fix nested toc spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -250,6 +250,9 @@
     font-size: 24px;
 }
 
+.nested-list {
+    margin-bottom: 0px;
+}
 
 
 /**
